<resources>
    <string name="app_name">音乐之声</string>
    <string name="local_music">本地音乐</string>
    <string name="local_music_init">(点击扫描)</string>
    <string name="recent_play">最近播放</string>
    <string name="recent_play_init">(暂无最近播放)</string>
    <string name="download_init">(0)</string>
    <string name="download">下载管理</string>
    <string name="my_radio">我的电台</string>
    <string name="my_radio_init">(暂无收藏电台)</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_collection_init">(专辑/歌手/视频/专栏)</string>
    <string name="new_music">新歌榜</string>
    <string name="hot_music">热歌榜</string>
    <string name="billboard_music">billboard公告牌</string>
    <string name="classical_music">经典老歌榜</string>
    <string name="movie_music">影视金曲榜</string>
    <string name="net_music">网络歌曲榜</string>
    <string name="europe_music">欧美金曲榜</string>
    <string name="change_mode">夜间模式</string>
    <string name="settings">设置</string>
    <string name="quit">退出</string>
    <string name="loading_hard">努力加载中…</string>
    <string name="loading_failed">加载失败，请稍后重试</string>
    <string name="playlist_collect_all">收藏全部</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
