<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--本地音乐-->
        <LinearLayout
            android:id="@+id/layout_local_music"
            android:layout_width="match_parent"
            android:layout_height="@dimen/music_item_height"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/local_music_icon_size"
                android:layout_height="@dimen/local_music_icon_size"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/local_music_margin"
                android:scaleType="fitXY"
                android:src="@drawable/music_local" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/local_music_margin"
                android:layout_marginStart="@dimen/local_music_margin"
                android:text="@string/local_music"
                android:textColor="@android:color/black"
                android:textSize="@dimen/local_music_item_font" />

            <TextView
                android:id="@+id/tv_local_music_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/local_music_init" />
        </LinearLayout>

        <include layout="@layout/divider_line_margin" />
        <!--最近播放-->
        <LinearLayout
            android:id="@+id/layout_recent_play"
            android:layout_width="match_parent"
            android:layout_height="@dimen/music_item_height"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/local_music_icon_size"
                android:layout_height="@dimen/local_music_icon_size"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/local_music_margin"
                android:scaleType="fitXY"
                android:src="@drawable/recent_play" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/local_music_margin"
                android:layout_marginStart="@dimen/local_music_margin"
                android:text="@string/recent_play"
                android:textColor="@android:color/black"
                android:textSize="@dimen/local_music_item_font" />

            <TextView
                android:id="@+id/tv_recent_paly_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/recent_play_init" />
        </LinearLayout>

        <include layout="@layout/divider_line_margin" />
        <!--下载管理-->
        <LinearLayout
            android:id="@+id/layout_download_music"
            android:layout_width="match_parent"
            android:layout_height="@dimen/music_item_height"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/local_music_icon_size"
                android:layout_height="@dimen/local_music_icon_size"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/local_music_margin"
                android:scaleType="fitXY"
                android:src="@drawable/download_music" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/local_music_margin"
                android:layout_marginStart="@dimen/local_music_margin"
                android:text="@string/download"
                android:textColor="@android:color/black"
                android:textSize="@dimen/local_music_item_font" />

            <TextView
                android:id="@+id/tv_download_music_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/download_init" />
        </LinearLayout>

        <include layout="@layout/divider_line_margin" />
        <!--我的电台-->
        <LinearLayout
            android:id="@+id/layout_radio"
            android:layout_width="match_parent"
            android:layout_height="@dimen/music_item_height"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/local_music_icon_size"
                android:layout_height="@dimen/local_music_icon_size"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/local_music_margin"
                android:scaleType="fitXY"
                android:src="@drawable/radio" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/local_music_margin"
                android:layout_marginStart="@dimen/local_music_margin"
                android:text="@string/my_radio"
                android:textColor="@android:color/black"
                android:textSize="@dimen/local_music_item_font" />

            <TextView
                android:id="@+id/tv_radio_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/my_radio_init" />
        </LinearLayout>

        <include layout="@layout/divider_line_margin" />
        <!--我的收藏-->
        <LinearLayout
            android:id="@+id/layout_collection"
            android:layout_width="match_parent"
            android:layout_height="@dimen/music_item_height"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/local_music_icon_size"
                android:layout_height="@dimen/local_music_icon_size"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/local_music_margin"
                android:scaleType="fitXY"
                android:src="@drawable/local_collect" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/local_music_margin"
                android:layout_marginStart="@dimen/local_music_margin"
                android:text="@string/my_collection"
                android:textColor="@android:color/black"
                android:textSize="@dimen/local_music_item_font" />

            <TextView
                android:id="@+id/tv_collection_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/my_collection_init" />
        </LinearLayout>

        <!--未完待续-->
    </LinearLayout>
</ScrollView>